--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <title>Sensori</title>
   	<!-- UIkit CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.7.6/dist/css/uikit.min.css" />
@@ -17,30 +16,34 @@
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div id = "debug">
-   <div id = "sensor-description">
-     Description:
-   </div>
-   <div id = "sensor-id">
-     ID:
-   </div>
-   <div id = "sensor-lat">
-     Latitude:
-   </div>
-   <div id = "sensor-lng">
-     Longitude:
-   </div>
-   <div id = "sensor-readonly">
-     Readonly:
-   </div>
-   <div id = "sensor-stateCode">
-     StateCode:
-   </div>
-   <div id = "sensor-value">
-     Value:
-   </div>
-  </div>
-  <script src="sensor.js"></script>
+	<div class="uk-container uk-container-large">
+    <div id = "sensor-description">
+				Description:
+			</div>
+      <div id="sensor-id">
+          ID: 
+        </div>
+			<div id="sensor-lat">
+        Latitude: 
+			</div>
+      <div id="sensor-lng">
+        Longitude:
+      </div>
+      <div id="sensor-place">
+        Place:
+      </div>
+      <div id="sensor-readonly">
+        Readonly:
+      </div>
+      <div id="sensor-statecode">
+        Statecode:
+      </div>
+      <div id="sensor-value">
+        Value:
+      </div>
+	</div>
+	<div id="debug"></div></div>
+	<script src="sensor.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
