visualizzazione html dati

--- a/index.html
+++ b/index.html
@@ -17,30 +17,38 @@
 </head>
 <body>
 	<div class="uk-container uk-container-large">
-    <div id = "sensor-description">
-				Description:
-			</div>
-      <div id="sensor-id">
-          ID: 
-        </div>
-			<div id="sensor-lat">
-        Latitude: 
-			</div>
-      <div id="sensor-lng">
-        Longitude:
-      </div>
-      <div id="sensor-place">
-        Place:
-      </div>
-      <div id="sensor-readonly">
-        Readonly:
-      </div>
-      <div id="sensor-statecode">
-        Statecode:
-      </div>
-      <div id="sensor-value">
-        Value:
-      </div>
+    <div><div class="uk-card uk-card-hover uk-card-body uk-width-1-2@m uk-align-center" id="card0">
+      <button class="uk-button uk-button-default" type="button" uk-toggle="target: #toggle-usage" id="btn0">More About It</button></div>
+  </div>
+  <div class="uk-container uk-container-large">
+    <p><div class="uk-card uk-card-hover uk-card-body uk-width-1-2@m uk-align-center" id="card1"></p>
+    <button class="uk-button uk-button-default" type="button" uk-toggle="target: #toggle-usage" id="btn1">More About It</button>
+  </div>
+  <div class="uk-container uk-container-large">
+    <div class="uk-card uk-card-hover uk-card-body uk-width-1-2@m uk-align-center" id="card2">
+      <button class="uk-button uk-button-default" type="button" uk-toggle="target: #toggle-usage" id="btn2">More About It</button>
+  </div>
+  <div class="uk-container uk-container-large">
+    <div class="uk-card uk-card-hover uk-card-body uk-width-1-2@m uk-align-center" id="card3">
+    <button class="uk-button uk-button-default" type="button" uk-toggle="target: #toggle-usage" id="btn3">More About It</button>
+  </div>
+  <div class="uk-container uk-container-large">
+    <div class="uk-card uk-card-hover uk-card-body uk-width-1-2@m uk-align-center" id="card4">
+      <button class="uk-button uk-button-default" type="button" uk-toggle="target: #toggle-usage" id="btn4">More About It</button>
+  </div>
+  <div class="uk-container uk-container-large">
+    <div class="uk-card uk-card-hover uk-card-body uk-width-1-2@m uk-align-center" id="card5">
+      <button class="uk-button uk-button-default" type="button" uk-toggle="target: #toggle-usage" id="btn5">More About It</button>
+  </div>
+  <div class="uk-container uk-container-large">
+    <div class="uk-card uk-card-hover uk-card-body uk-width-1-2@m uk-align-center" id="card6">
+      <button class="uk-button uk-button-default" type="button" uk-toggle="target: #toggle-usage" id="btn6">More About It</button>
+  </div>
+  <div class="uk-container uk-container-large">
+    <div class="uk-card uk-card-hover uk-card-body uk-width-1-2@m uk-align-center" id="card7">
+      <button class="uk-button uk-button-default" type="button" uk-toggle="target: #toggle-usage" id="btn7">More About It</button>
+  </div>
+
 	</div>
 	<div id="debug"></div></div>
 	<script src="sensor.js"></script>
